gccida/c1/try_tablejump
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_tablejump/src/expr.c:11089:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_tablejump/src/expr.c:11090:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_tablejump/src/expr.c:11109:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)v16, 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_tablejump/src/expr.c:11110:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)v14, 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_tablejump/src/expr.c:11113:22: error: use of undeclared identifier 'machine_mode'
do_tablejump( v15, ( machine_mode)v16, v18, table_label, default_label); 
                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/try_tablejump/src/obj/expr.o] Error 1
